--- a/build.gradle
+++ b/build.gradle
@@ -23,30 +23,30 @@ buildscript {
         targetSdkVersion = 32
 
         // App dependencies
-        appCompatVersion = '1.4.2'
+        appCompatVersion = '1.5.0'
         composeCompilerVersion = '1.3.0'
         composeVersion = '1.2.1'
         constraintLayoutVersion = '2.1.4'
         coreTestingVersion = '2.1.0'
-        coroutinesVersion = "1.6.3"
+        coroutinesVersion = '1.6.4'
         // TODO: Updating to 3.4.0 leads to dependency conflicts
-        espressoVersion = '3.3.0'
-        fragmentVersion = '1.5.0'
-        glideVersion = '4.12.0'
+        espressoVersion = '3.4.0'
+        fragmentVersion = '1.5.2'
+        glideVersion = '4.13.2'
         gradleVersion = '7.2.2'
-        gsonVersion = '2.9.0'
+        gsonVersion = '2.9.1'
         junitVersion = '4.13.2'
         kotlinVersion = '1.7.10'
         ktlintVersion = '0.45.2'
         ktxVersion = '1.8.0'
-        lifecycleVersion = '2.5.0'
+        lifecycleVersion = '2.5.1'
         materialVersion = '1.6.1'
-        materialComposeAdapterVersion = '1.1.14'
-        navigationVersion = '2.5.0'
+        materialComposeAdapterVersion = '1.1.16'
+        navigationVersion = '2.5.1'
         recyclerViewVersion = '1.2.1'
         roomVersion = '2.5.0-alpha02'
         runnerVersion = '1.0.1'
-        truthVersion = '1.1.2'
+        truthVersion = '1.1.3'
         testExtJunit = '1.1.3'
         uiAutomatorVersion = '2.2.0'
         viewPagerVersion = '1.0.0'
