--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,9 +97,15 @@ dependencies {
 
     // Testing dependencies
     androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
-    androidTestImplementation "androidx.test.espresso:espresso-contrib:$rootProject.espressoVersion"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$rootProject.espressoVersion"
-    androidTestImplementation "androidx.test.espresso:espresso-intents:$rootProject.espressoVersion"
+    androidTestImplementation('androidx.test.espresso:espresso-contrib:' + rootProject.espressoVersion) {
+        exclude group: 'org.checkerframework', module: 'checker'
+    }
+    androidTestImplementation('androidx.test.espresso:espresso-core:' + rootProject.espressoVersion) {
+        exclude group: 'org.checkerframework', module: 'checker'
+    }
+    androidTestImplementation('androidx.test.espresso:espresso-intents:' + rootProject.espressoVersion) {
+        exclude group: 'org.checkerframework', module: 'checker'
+    }
     androidTestImplementation "androidx.test.ext:junit:$rootProject.testExtJunit"
     androidTestImplementation "androidx.test.uiautomator:uiautomator:$rootProject.uiAutomatorVersion"
     androidTestImplementation "androidx.work:work-testing:$rootProject.workVersion"
